implement game board and setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container flex flex-start items-start ha-c gg-2 py-5">
-  <img src="assets/favicon.svg" alt="team 30 logo">
+    <app-board />
 </div>
 
 <router-outlet></router-outlet>
