add config service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,18 @@
 <div class="container flex flex-start items-start ha-c gg-2 py-5">
-  <img src="assets/favicon.svg" alt="team 30 logo">
-</div>
+    <!-- <app-board /> -->
+    <app-board #board></app-board>
+    <div>
+        <div class="flex-col fg0">
+            <!-- <div id="reset" class="btn blue txt-upper">Select Random Piece</div> -->
+        </div>
+        <div>
+            <div class="grid cols-2 mt">
+                <!-- <div (click)="play()" class="btn pink">Play</div> -->
+                <!-- <div (click)="rotate()" class="btn pink">Rotate</div> -->
+                <!-- <div (click)="pause()" class="btn yellow">Pause</div> -->
+            </div>
 
+        </div>
+    </div>
+</div>
 <router-outlet></router-outlet>
