Reducing redundancy in movement methods and utilizing game configuration for boundary checks in Piece model.

--- a/src/app/pages/game.component.html
+++ b/src/app/pages/game.component.html
@@ -7,9 +7,9 @@
         </div>
         <div>
             <div class="grid cols-2 mt">
-                <!-- <div (click)="play()" class="btn pink">Play</div> -->
-                <!-- <div (click)="rotate()" class="btn pink">Rotate</div> -->
-                <!-- <div (click)="pause()" class="btn yellow">Pause</div> -->
+                <!-- <div (click)="play()" class="btn pink">Play</div>
+                <div (click)="rotate()" class="btn pink">Rotate</div>
+                <div (click)="pause()" class="btn yellow">Pause</div> -->
             </div>
 
         </div>
