update start page and add goodbye page for exiting

--- a/src/app/pages/start.component.html
+++ b/src/app/pages/start.component.html
@@ -1,1 +1,28 @@
-<p>start works!</p>
+<div class="container maxw-md">
+
+    <div class="flex-col justify-center items-center mt-3">
+
+        <div class="title fw9 inline-flex">TETRIS</div>
+
+        <h2>3815ICT Software Engineering - 2023</h2>
+
+        <div class="flex gg va-c txt-lg">
+            <div>
+                <p class="my-025">Hector Moya</p>
+                <p class="my-025">Jiaxiang Yao</p>
+                <p class="my-025">Nathan Watts</p>
+            </div>
+
+            <logo />
+        </div>
+
+        <div class="space-x mt-5">
+            <button (click)="playGame()" class="btn blue w-8">Play</button>
+            <button (click)="exitGame()" class="btn danger outline w-8">Exit</button>
+            <button class="btn warning outline w-8" disabled>Configuration</button>
+            <button class="btn success outline w-8" disabled>High Scores</button>
+        </div>
+
+    </div>
+
+</div>
