--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,14 @@
 );
 
 @use "node_modules/nk_jtb/src/jtb";
+
+.flex + input {
+    margin: 0;
+}
+
+.title {
+    background-image: linear-gradient(to bottom right, teal, blue, orange, yellow, green, purple, red, skyblue, pink);
+    background-clip: text;
+    color: transparent;
+    font-size: 5rem;
+}
