--- a/src/app/pages/start.component.html
+++ b/src/app/pages/start.component.html
@@ -21,7 +21,12 @@
             <button (click)="exitGame()" class="btn danger outline w-8">Exit</button>
             <button class="btn warning outline w-8" disabled>Configuration</button>
             <button class="btn success outline w-8" disabled>High Scores</button>
+            <button (click)="openModal()" class="btn teal outline w-8">Open Modal</button>
         </div>
+
+        <modal>
+            This is the modal content!
+        </modal>
 
     </div>
 
