--- a/src/app/pages/start.component.html
+++ b/src/app/pages/start.component.html
@@ -20,12 +20,11 @@
             <button (click)="playGame()" class="btn blue w-8">Play</button>
             <button (click)="exitGame()" class="btn danger outline w-8">Exit</button>
             <button class="btn warning outline w-8" disabled>Configuration</button>
-            <button class="btn success outline w-8" disabled>High Scores</button>
-            <button (click)="openModal()" class="btn teal outline w-8">Open Modal</button>
+            <button (click)="openModal('High Scores')" class="btn success outline w-8">High Scores</button>
         </div>
 
         <modal>
-            This is the modal content!
+            <app-high-score />
         </modal>
 
     </div>
