Added functionality to render the next piece in a separate canvas, centering it for preview. Modified GameComponent, piece.service and Piece model to handle this change.

--- a/src/app/pages/game.component.html
+++ b/src/app/pages/game.component.html
@@ -6,6 +6,7 @@
             <!-- <div id="reset" class="btn blue txt-upper">Select Random Piece</div> -->
         </div>
         <div>
+            <canvas #nextPieceBoard class="bdr-red bdr-3"></canvas>
             <div class="grid cols-2 mt">
                 <div (click)="play()" class="btn pink">Play</div>
                 <div (click)="rotate()" class="btn pink">Rotate</div>
