add additional html elements for presentation

--- a/src/app/game-components/score.component.html
+++ b/src/app/game-components/score.component.html
@@ -1,6 +1,12 @@
 <div class="bx dark">
 
     <div class="txt-xl flex">
+        <span class="fg1">Game Mode:</span> <span>Extended</span>
+    </div>
+    <div class="txt-xl flex">
+        <span class="fg1">Player Mode:</span> <span>Player</span>
+    </div>
+    <div class="txt-xl flex">
         <span class="fg1">Score:</span> <span>{{ gameStats.score }}</span>
     </div>
 
