--- a/src/app/pages/game.component.html
+++ b/src/app/pages/game.component.html
@@ -2,10 +2,14 @@
     <app-board #board></app-board>
     <div>
         <div>
+            <logo class="wh-8" />
+            <hr>
             <canvas #nextPieceBoard class="bdr-red bdr-3"></canvas>
+            <hr>
+
             <div class="grid cols-2 mt">
                 <div (click)="play()" class="btn pink">Play</div>
-                <div (click)="rotate()" class="btn pink">Rotate</div>
+                <!-- <div (click)="rotate()" class="btn pink">Rotate</div> -->
                 <div (click)="pause()" class="btn yellow">Pause</div>
             </div>
         </div>
