--- a/src/app/controllers/pages/game.component.html
+++ b/src/app/controllers/pages/game.component.html
@@ -1,5 +1,8 @@
 <div class="container flex flex-start items-start ha-c gg-2 py-5">
-    <app-board #newBoard></app-board>
+    <!-- <app-board #newBoard></app-board> -->
+
+    <app-board-new></app-board-new>
+
     <app-board #board></app-board>
     <div>
         <div>
