Work in progress, adding next piece.

--- a/src/app/controllers/pages/game.component.html
+++ b/src/app/controllers/pages/game.component.html
@@ -19,6 +19,7 @@
         </div>
         <div class="w-24 mt">
             <app-score></app-score>
+            <app-next-piece></app-next-piece>
         </div>
     </div>
 </div>
