Handing over a bug of workms, deal with it Nathan.

--- a/src/app/controllers/pages/game.component.html
+++ b/src/app/controllers/pages/game.component.html
@@ -3,12 +3,11 @@
 
     <app-board-new></app-board-new>
 
-    <app-board #board></app-board>
+    <!-- <app-board #board></app-board> -->
     <div>
         <div>
             <logo class="wh-8" />
             <hr>
-            <app-next-piece></app-next-piece>
             <hr>
 
             <div class="grid cols-2 mt">
@@ -19,6 +18,7 @@
         </div>
         <div class="w-24 mt">
             <app-score></app-score>
+            <app-next-piece></app-next-piece>
         </div>
     </div>
 </div>
