--- a/src/app/game-components/score.component.html
+++ b/src/app/game-components/score.component.html
@@ -1,34 +1,34 @@
-<div class="bx dark">
+<div class="bx dark maxw-300">
 
-    <div class="txt-xl flex">
+    <div class="flex">
         <span class="fg1">Game Mode:</span> <span>Extended</span>
     </div>
-    <div class="txt-xl flex">
+    <div class="flex">
         <span class="fg1">Player Mode:</span> <span>Player</span>
     </div>
-    <div class="txt-xl flex">
+    <div class="flex">
         <span class="fg1">Score:</span> <span>{{ gameStats.score }}</span>
     </div>
 
-    <div class="txt-xl flex">
+    <div class="flex">
         <span class="fg1">Lines:</span> <span>{{ gameStats.lines }}</span>
     </div>
 
-    <div class="txt-xl flex">
+    <div class="flex">
         <span class="fg1">Level:</span> <span>{{ gameStats.level }}</span>
     </div>
 
     <hr>
 
     <div class="txt-sm tac">
-        Click button to increment score and line count
+        <small>Click button to increment score and line count</small>
     </div>
 
     <div class="grid cols-4 mt">
-        <button (click)="clear(1)" class="btn sm teal">1</button>
-        <button (click)="clear(2)" class="btn sm teal">2</button>
-        <button (click)="clear(3)" class="btn sm teal">3</button>
-        <button (click)="clear(4)" class="btn sm teal">4</button>
+        <button (click)="clear(1)" class="btn xs pxy-075 teal">1</button>
+        <button (click)="clear(2)" class="btn xs pxy-075 teal">2</button>
+        <button (click)="clear(3)" class="btn xs pxy-075 teal">3</button>
+        <button (click)="clear(4)" class="btn xs pxy-075 teal">4</button>
     </div>
 
 </div>
