--- a/src/app/views/pages/game.component.html
+++ b/src/app/views/pages/game.component.html
@@ -1,6 +1,9 @@
 <div class="container flex flex-start items-start ha-c gg-2 py-5">
 
     <app-board [config]="config"></app-board>
+    <div class="flex flex-col items-center justify-center">
+        <button class="btn btn-primary" (click)="play()">Play</button>
+    </div>
 
     <div>
 
