--- a/src/app/views/pages/game.component.html
+++ b/src/app/views/pages/game.component.html
@@ -4,6 +4,9 @@
     <div class="flex flex-col items-center justify-center">
         <button class="btn btn-primary" (click)="play()">Play</button>
     </div>
+    <div class="flex flex-col items-center justify-center">
+        <button class="btn btn-primary" (click)="pause()">Pause</button>
+    </div>
 
     <div>
 
