implement piece swapping

--- a/src/app/views/pages/game.component.html
+++ b/src/app/views/pages/game.component.html
@@ -1,21 +1,14 @@
 <div class="container flex flex-start items-start ha-c gg-2 py-5">
 
-    <app-board [config]="config"></app-board>
+    <app-board [config]="config" (newNextPieceEvent)="nextPiece.setPiece()" />
 
     <div>
 
         <div class="space-y">
-
             <logo class="wh-8" />
-
             <div>
-                <app-next-piece [config]="config" />
+                <app-next-piece [config]="config" #nextPiece />
             </div>
-
-            <div class="grid cols-2 mt">
-                <!-- <div (click)="pause()" class="btn yellow">Pause</div> -->
-            </div>
-
         </div>
 
         <div class="w-24">
@@ -23,4 +16,5 @@
         </div>
 
     </div>
+
 </div>
