--- a/src/app/views/game/config.component.html
+++ b/src/app/views/game/config.component.html
@@ -10,13 +10,13 @@
             <div class="flex space-between">
                 <label for="rows">Rows x {{ config.rows }}</label>
             </div>
-            <input [(ngModel)]="config.rows" name="rows" type="range" min="16" max="24" value="20" step="2">
+            <input [(ngModel)]="config.rows" name="rows" type="range" min="10" max="30" value="20" step="2">
         </div>
         <div class="frm-row">
             <div class="flex space-between">
                 <label for="rows">Start Level {{ config.startLevel }}</label>
             </div>
-            <input [(ngModel)]="config.startLevel" name="startLevel" type="range" min="1" max="50" value="1">
+            <input [(ngModel)]="config.startLevel" name="startLevel" type="range" min="1" max="20" value="1">
         </div>
         <hr>
         <div class="frm-row">
@@ -30,25 +30,8 @@
 
         </div>
     </div>
-    <hr>
-    <!-- <div class="grid cols-3 mt">
-        <div class="frm-row">
-            <label for="columns">Columns</label>
-            <input [(ngModel)]="config.columns" name="columns" class="sm">
-        </div>
-        <div class="frm-row">
-            <label for="rows">Rows</label>
-            <input [(ngModel)]="config.rows" name="rows" class="sm">
-        </div>
-        <div class="frm-row">
-            <label for="startLevel">Level</label>
-            <input [(ngModel)]="config.startLevel" name="startLevel" class="sm">
-        </div>
-    </div> -->
 </form>
 
-<div class="grid cols-2">
-    <button class="btn blue" (click)="updateConfig()">Update</button>
-    <button class="btn blue" disabled>Play</button>
+<div class="tar">
     <button class="btn red" disabled>AI Demo</button>
 </div>
