--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,10 @@
     font-size: 5rem;
 }
 
-.stats{
-    border: 1px solid #161d30;
+.stats {
+    border: 1px solid #1c2f63;
+}
+
+.board {
+    border: 10px solid #1c2f63;
 }
