--- a/src/app/views/pages/start.component.html
+++ b/src/app/views/pages/start.component.html
@@ -14,7 +14,6 @@
             </svg>
         </button>
     </div>
-
     <div class="flex-col justify-center items-center mt-3">
 
         <div class="title fw9 inline-flex">TETRIS</div>
@@ -34,6 +33,7 @@
 
         <div class="flex space-x mt-5">
             <button (click)="playGame()" class="btn blue w-8">Play</button>
+            <button (click)="demoGame()" class="btn blue w-8 pink">Demo</button>
             <button (click)="exitGame()" class="btn danger outline w-8">Exit</button>
             <button (click)="openConfig()" class="btn warning outline w-8">Configuration</button>
             <button (click)="openHighScores()" class="btn success outline w-8">High Scores</button>
@@ -59,8 +59,6 @@
         </modal>
 
         <pre class="pxy-1" *ngIf="devMode">{{config|json}}</pre>
-
-
 
     </div>
 
