--- a/src/app/views/game/board.component.html
+++ b/src/app/views/game/board.component.html
@@ -2,7 +2,7 @@
     <ng-container *ngIf="devMode">
         <div>
             <div class="flex space-x mt w-16">
-                <button (click)="test()" class="btn xs">Test</button>
+                <!-- <button (click)="test()" class="btn xs">Test</button> -->
                 <button (click)="reload()" class="btn xs dark">Reload</button>
                 <button (click)="handleGameOver()" class="btn xs dark">Game Over</button>
             </div>
@@ -13,8 +13,8 @@
         <canvas #canvas class="bdrr stats board"></canvas>
     </div>
     <modal>
-        <ng-container *ngIf="modalType === 'highScore'">
-            <p>Congratulations! Your score has landed you among the top 10 players</p>
+        <ng-container *ngIf="modalType === 'enterHighScoreName'">
+            <p>Enter you name and select continue.</p>
             <div class="frm-row">
                 <input [(ngModel)]="playerName" name="name" placeholder="Enter your name..." required>
             </div>
